objects/ASA__c.object
<CustomObject>
    <fields>
        <fullName>Other_Goals_Priority_1__c</fullName>
        <label>Other Goals Priority 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_1_403b__c</fullName>
        <label>Owner 1 403b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_457b__c</fullName>
        <label>Owner 1 457b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_IRA__c</fullName>
        <label>Owner 1 IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Roth_401K__c</fullName>
        <label>Owner 1 Roth 401K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_Roth_IRA__c</fullName>
        <label>Owner 1 Roth IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_SEP_IRA__c</fullName>
        <label>Owner 1 SEP IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_1_on_Taxable_Investment__c</fullName>
        <label>Owner 1 on Taxable Investment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_403b__c</fullName>
        <label>Owner 2 403b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_IRA__c</fullName>
        <label>Owner 2 IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Roth_401K__c</fullName>
        <label>Owner 2 Roth 401K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_Roth_IRA__c</fullName>
        <label>Owner 2 Roth IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_SEP_IRA__c</fullName>
        <label>Owner 2 SEP IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2_on_Taxable_Investment__c</fullName>
        <label>Owner 2 on Taxable Investment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_IRA__c</fullName>
        <label>Owner 3 IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Roth_401K__c</fullName>
        <label>Owner 3 Roth 401K</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Roth_IRA__c</fullName>
        <label>Owner 3 Roth IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_SEP_IRA__c</fullName>
        <label>Owner 3 SEP IRA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_401k_1__c</fullName>
        <label>Owner 401k 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_401k_2__c</fullName>
        <label>Owner 401k 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_401k_3__c</fullName>
        <label>Owner 401k 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Simple_IRA_1__c</fullName>
        <label>Owner Simple IRA 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Simple_IRA_2__c</fullName>
        <label>Owner Simple IRA 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Simple_IRA_3__c</fullName>
        <label>Owner Simple IRA 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_Name__c</fullName>
        <label>Pension Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_Owner__c</fullName>
        <label>Pension Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_Type__c</fullName>
        <label>Pension Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_and_Annuities_1_Income__c</fullName>
        <label>Pension and Annuities 1 Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension_and_Annuities_1_Name__c</fullName>
        <label>Pension and Annuities 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_and_Annuities_2_Income__c</fullName>
        <label>Pension and Annuities 2 Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension_and_Annuities_2_Name__c</fullName>
        <label>Pension and Annuities 2 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pension_and_Annuities_3_Income__c</fullName>
        <label>Pension and Annuities 3 Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension_and_Annuities_3_Name__c</fullName>
        <label>Pension and Annuities 3 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property_1_Type__c</fullName>
        <label>Personal Property 1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Residence</fullName>
                </value>
                <value>
                    <fullName>Secondary Residence</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Collectibles</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Property_2_Type__c</fullName>
        <label>Personal Property 2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Residence</fullName>
                </value>
                <value>
                    <fullName>Secondary Residence</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Collectibles</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Property_3_Type__c</fullName>
        <label>Personal Property 3 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Current_Value_1__c</fullName>
        <label>Personal Property Current Value 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Current_Value_2__c</fullName>
        <label>Personal Property Current Value 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Current_Value_3__c</fullName>
        <label>Personal Property Current Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Name_1__c</fullName>
        <label>Personal Property Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Name_2__c</fullName>
        <label>Personal Property Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Purchase_Value_1__c</fullName>
        <label>Personal Property Purchase Value 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Purchase_Value_2__c</fullName>
        <label>Personal Property Purchase Value 2</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Purchase_Value_3__c</fullName>
        <label>Personal Property Purchase Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority_1__c</fullName>
        <label>Priority 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_2__c</fullName>
        <label>Priority 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Discussed__c</fullName>
        <inlineHelpText>What insurance products were discussed?</inlineHelpText>
        <label>Products Discussed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QRP_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QRP Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <inlineHelpText>Who the client was referred to</inlineHelpText>
        <label>Referred To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFS</fullName>
                </value>
                <value>
                    <fullName>CRG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental_Income_1__c</fullName>
        <label>Rental Income 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Income_2__c</fullName>
        <label>Rental Income 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_10_Name__c</fullName>
        <label>Rental Property 10 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property_10_Type__c</fullName>
        <label>Rental Property 10 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property_1_Current_Value__c</fullName>
        <label>Rental Property 1 Current Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_1_Name__c</fullName>
        <label>Rental Property 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property_1_Purchase_Value__c</fullName>
        <label>Rental Property 1 Purchase Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_1_Type__c</fullName>
        <label>Rental Property 1 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property_2_Current_Value__c</fullName>
        <label>Rental Property 2 Current Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_2_Name__c</fullName>
        <label>Rental Property 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property_2_Purchase_Value__c</fullName>
        <label>Rental Property 2 Purchase Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_2_Type__c</fullName>
        <label>Rental Property 2 Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property_3_Current_Value__c</fullName>
        <label>Rental Property 3 Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_3_Purchase_Value__c</fullName>
        <label>Rental Property 3 Purchase Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Property_Current_Value_10__c</fullName>
        <label>Rental Property Current Value 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_Current_Value_4__c</fullName>
        <label>Rental Property Current Value 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_Current_Value_5__c</fullName>
        <label>Rental Property Current Value 5</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_Purchase_Value_10__c</fullName>
        <label>Rental Property Purchase Value 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_Purchase_Value_4__c</fullName>
        <label>Rental Property Purchase Value 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_Purchase_Value_5__c</fullName>
        <label>Rental Property Purchase Value 5</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_1_Age__c</fullName>
        <label>Retirement 1 Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_1_Income_Wanted__c</fullName>
        <label>Retirement 1 Income Wanted</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_1_Living_Expenses__c</fullName>
        <label>Retirement 1 Living Expenses</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_1_for__c</fullName>
        <label>Retirement 1 for</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_2_Age__c</fullName>
        <label>Retirement 2 Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retirement_2_Income_Wanted__c</fullName>
        <label>Retirement 2 Income Wanted</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_2_Living_Expenses__c</fullName>
        <label>Retirement 2 Living Expenses</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retirement_2_for__c</fullName>
        <label>Retirement 2 for</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Call_Scheduled_Date__c</fullName>
        <description>Date the review call is scheudled</description>
        <inlineHelpText>Date the review call is scheudled</inlineHelpText>
        <label>Review Call Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Risk_Management_Insurance_Comments__c</fullName>
        <label>Risk Management/ Insurance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Management_Insurance_Planning__c</fullName>
        <label>Risk Management/ Insurance Planning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roth_IRA_Account_Value_1__c</fullName>
        <label>Roth IRA Account Value 1</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roth_IRA_Account_Value_2__c</fullName>
        <label>Roth IRA Account Value 2</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Roth_IRA_Account_Value_3__c</fullName>
        <label>Roth IRA Account Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_IRA_1_Account_Value__c</fullName>
        <label>SEP IRA 1 Account Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_IRA_2_Account_Value__c</fullName>
        <label>SEP IRA 2 Account Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_IRA_3_Account_Value__c</fullName>
        <label>SEP IRA 3 Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Self_Employment_Income_2__c</fullName>
        <label>Self-Employment Income 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Self_Employment_Income__c</fullName>
        <label>Self-Employment Income 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spouses_Birthdate__c</fullName>
        <label>Spouses Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spouses_First_Name__c</fullName>
        <label>Spouses First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouses_Last_Name__c</fullName>
        <label>Spouses Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouses_Marital_Status__c</fullName>
        <label>Spouses Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouses_Mobile_Phone__c</fullName>
        <label>Spouses Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Strategy_Suggestions__c</fullName>
        <inlineHelpText>This is a space the Financial Analyst inputs their suggested strategies.</inlineHelpText>
        <label>Strategy Suggestions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Mitigation_Priority_Comments__c</fullName>
        <label>Tax Mitigation Priority Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Mitigation_Priority__c</fullName>
        <label>Tax Mitigation Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Job_Position_1__c</fullName>
        <label>Title/ Job Position 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Job_Position_2__c</fullName>
        <label>Title/ Job Position 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Left_to_Beneficiaries__c</fullName>
        <label>Total Amount Left to Beneficiaries</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Income_1__c</fullName>
        <formula>Self_Employment_Income__c + Cash_Dividends_1__c + Rental_Income_1__c + Interest_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Annual Income 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Income_2__c</fullName>
        <formula>Self_Employment_Income_2__c + Cash_Dividends_2__c + Rental_Income_2__c + Interest_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Annual Income 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <description>type of insurance 1</description>
        <label>Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Whole Life</fullName>
                </value>
                <value>
                    <fullName>Universal Life</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Variable Universal Life</fullName>
                </value>
                <value>
                    <fullName>Term Life (Employer Provided)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <label>Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Whole Life</fullName>
                </value>
                <value>
                    <fullName>Universal Life</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Variable Universal Life</fullName>
                </value>
                <value>
                    <fullName>Term Life (Employer Provided)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yearly_Follow_up_Date__c</fullName>
        <inlineHelpText>The date the Financial Analyst should follow-up with the client.</inlineHelpText>
        <label>Yearly Follow-up Date</label>
        <type>Date</type>
    </fields>
    <label>ASA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASA_Stage__c</columns>
        <columns>Financial_Analyst__c</columns>
        <columns>Fact_Finder_Due_Date__c</columns>
        <columns>Comments__c</columns>
        <columns>Yearly_Follow_up_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Jaime</fullName>
        <columns>NAME</columns>
        <columns>ASA_Stage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR,LAST_YEAR</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Jaime</value>
        </filters>
        <filters>
            <field>Financial_Analyst__c</field>
            <operation>equals</operation>
            <value>Jason Kopp</value>
        </filters>
        <label>Jaime</label>
    </listViews>
    <nameField>
        <label>ASA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>